--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
+attrs==19.3.0
 beautifulsoup4==4.9.0
 bs4==0.0.1
 certifi==2020.4.5.1
 chardet==3.0.4
 cycler==0.10.0
 idna==2.9
+importlib-metadata==1.6.0
 kiwisolver==1.2.0
 matplotlib==3.2.1
+more-itertools==8.2.0
 numpy==1.18.2
+packaging==20.3
 Pillow==7.1.1
+pluggy==0.13.1
+py==1.8.1
 pyparsing==2.4.7
+pytest==5.4.1
 python-dateutil==2.8.1
 python-slugify==4.0.0
 requests==2.23.0
@@ -18,4 +25,6 @@ soupsieve==2.0
 text-unidecode==1.3
 Unidecode==1.1.1
 urllib3==1.25.9
+wcwidth==0.1.9
 wordcloud==1.6.0
+zipp==3.1.0
